feat: 新增知识库管理功能，优化项目结构与文档